--- a/sound/soc/intel/Kconfig
+++ b/sound/soc/intel/Kconfig
@@ -25,6 +25,7 @@ config SND_SOC_INTEL_CATPT
 	select DW_DMAC_CORE
 	select SND_SOC_ACPI_INTEL_MATCH
 	select WANT_DEV_COREDUMP
+	select SND_INTEL_DSP_CONFIG
 	help
 	  Enable support for Intel(R) Haswell and Broadwell platforms
 	  with I2S codec present. This is a recommended option.
@@ -210,10 +211,10 @@ config SND_SOC_INTEL_KEEMBAY
 
 config SND_SOC_INTEL_AVS
 	tristate "Intel AVS driver"
-	depends on PCI && ACPI
+	depends on X86 || COMPILE_TEST
+	depends on PCI
 	depends on COMMON_CLK
-	depends on SND_SOC_INTEL_SKYLAKE_FAMILY=n
-	select SND_SOC_ACPI
+	select SND_SOC_ACPI if ACPI
 	select SND_SOC_TOPOLOGY
 	select SND_SOC_HDA
 	select SND_HDA_EXT_CORE
@@ -223,8 +224,7 @@ config SND_SOC_INTEL_AVS
 	help
 	  Enable support for Intel(R) cAVS 1.5 platforms with DSP
 	  capabilities. This includes Skylake, Kabylake, Amberlake and
-	  Apollolake. This is a recommended option.
-	  Say Y or m if you have such device.
+	  Apollolake. 
 
 # Machine board drivers
 source "sound/soc/intel/avs/boards/Kconfig"
